--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -1,20 +1,20 @@
 .lists {
-    background-image: url(../images/contact-bg.png); /* Chemin relatif */
-    background-position: left center;
+    background-image: url(../images/contact-bg.png);
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover; /* Ajuste l'image à la taille de l'élément */
+    background-size: cover;
     position: relative;
-    height: 290px; /* Taille temporaire pour tester */
-    width: 100%; /* S'étend sur toute la largeur */
+    height: 50vh; /* La hauteur est basée sur 50% de la hauteur de la fenêtre du navigateur */
+    width: 100%;
 }
 
 .lists:before {
     content: "";
-    background: rgba(255, 255, 255, 0.3); /* Superposition blanche transparente */
+    background: rgba(255, 255, 255, 0.5); /* Augmenter l'opacité */
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1; /* Superposition visible */
+    z-index: 1;
 }
