--- a/src/assets/css/contact.css
+++ b/src/assets/css/contact.css
@@ -1,20 +1,20 @@
 .lists {
-    background-image: url(../images/contact-bg.png);
-    background-position: center;
+    background-image: url('/images/contact-bg.png'); /* Testez avec un chemin absolu */
+    background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover; /* Ajuste l'image pour couvrir toute la zone */
     position: relative;
-    height: 50vh; /* La hauteur est basée sur 50% de la hauteur de la fenêtre du navigateur */
-    width: 100%;
+    height: 290px; /* Ajustez la hauteur comme nécessaire */
+    width: 100%; /* Assurez-vous que la largeur est correcte */
 }
 
 .lists:before {
     content: "";
-    background: rgba(255, 255, 255, 0.5); /* Augmenter l'opacité */
+    background: rgba(255, 255, 255, 0.3); /* Superposition semi-transparente */
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1;
+    z-index: 1; /* Assurez-vous que la superposition est au-dessus de l'image */
 }
